Medium-layout: more "comment section collapse" fixes
- When collapsing, scroll back to the first comment instead of hanging in the Recommended section.

- Enhancement for 5380bc04: don't show "Collapse/Expanse" if there's only 1 comment. The comment itself is already collapsed to 3 lines, so it won't take up too much height.

- Fix css: recalling what Dan mentioned: if following BEM right (modifiers shouldn't be used standalone), we wouldn't incorrectly use `@extend` in this case and confuse the reader.

- Enlarged the empty spacing to make it symmetrical with the Recommended section below it.

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -627,8 +627,7 @@
 }
 
 .card__bottom-actions--comments {
-  @extend .card__bottom-actions;
-  margin-top: var(--spacing-s);
+  margin-top: var(--spacing-xl);
 }
 
 .card__multi-pane {
